--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mi-proyecto",
+  "name": "gittags",
   "version": "1.0.0",
   "scripts": {
     "generate-changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0"
