--- a/.github/workflows/changelog.yaml
+++ b/.github/workflows/changelog.yaml
@@ -40,4 +40,4 @@ jobs:
           git commit -m "docs: actualizo changelog tras release"
           git push origin main
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.release_changelog }}
