--- a/.github/workflows/changelog.yaml
+++ b/.github/workflows/changelog.yaml
@@ -20,8 +20,16 @@ jobs:
         with:
           node-version: 18
 
-      - name: Instalar dependencias necesarias
-        run: npm install --save-dev conventional-changelog-cli
+      - name: Cache de npm
+        uses: actions/cache@v3
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
+
+      - name: Instalar CLI de changelog globalmente
+        run: npm install -g conventional-changelog-cli
 
       - name: Crear archivo changelog si no existe
         run: |
@@ -30,14 +38,15 @@ jobs:
           fi
 
       - name: Generar/Actualizar el changelog
-        run: npx conventional-changelog -p angular -i CHANGELOG.md -s -r 0
+        run: conventional-changelog -p angular -i CHANGELOG.md -s -r 0
 
       - name: Hacer commit y push del changelog
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git add CHANGELOG.md
-          git commit -m "docs: actualizo changelog tras release"
-          git push origin main
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          git commit -m "docs: actualizo changelog tras release" || echo "No hay cambios para commitear"
+          git pull --rebase
+          git push origin HEAD:${{ github.ref_name }}
