Update changelog.yaml 6

--- a/.github/workflows/changelog.yaml
+++ b/.github/workflows/changelog.yaml
@@ -2,7 +2,7 @@ name: Generación CHANGELOG.md
 
 on:
   release:
-    types: [created]
+    types: [created, published]
 
 permissions:
   contents: write
