--- a/.github/workflows/changelog.yaml
+++ b/.github/workflows/changelog.yaml
@@ -2,7 +2,7 @@ name: Generación CHANGELOG.md
 
 on:
   release:
-    types: [published]
+    types: [created]
 
 permissions:
   contents: write
@@ -14,6 +14,9 @@ jobs:
     steps:
       - name: Checkout del repositorio
         uses: actions/checkout@v3
+
+      - name: Cambiar a la rama del release
+        run: git checkout ${{ github.event.release.target_commitish }}
 
       - name: Configurar Node.js
         uses: actions/setup-node@v3
@@ -48,5 +51,4 @@ jobs:
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git add CHANGELOG.md
           git commit -m "docs: actualizo changelog tras release" || echo "No hay cambios para commitear"
-          git pull --rebase
-          git push origin HEAD:${{ github.ref_name }}
+          git push origin HEAD:${{ github.event.release.target_commitish }}
