--- a/.github/workflows/changelog.yaml
+++ b/.github/workflows/changelog.yaml
@@ -19,15 +19,15 @@ jobs:
 
       - name: Detectar y cambiar a la rama del release o crear una temporal
         run: |
-          git fetch origin
+          git fetch --all
           BRANCH="${{ github.event.release.target_commitish }}"
 
-          # Si es una rama, cambiamos a ella
-          if git ls-remote --heads origin $BRANCH | grep $BRANCH; then
+          if git ls-remote --heads origin "$BRANCH" | grep "$BRANCH"; then
             echo "Cambiando a la rama $BRANCH"
-            git checkout $BRANCH
+            git checkout "$BRANCH"
           else
-            echo "No es una rama. Creamos rama temporal desde el tag/commit."
+            echo "No es una rama. Haciendo checkout al commit del tag y creando rama temporal"
+            git checkout "$BRANCH"    # checkout al commit (tag o SHA)
             git checkout -b temp-release-branch
           fi
 
