--- a/.github/workflows/changelog.yaml
+++ b/.github/workflows/changelog.yaml
@@ -13,10 +13,28 @@ jobs:
 
     steps:
       
-      - name: Cambiar a la rama del release
+      - name: Checkout del repositorio (con refs completos)
+        uses: actions/checkout@v3
+        with:
+           fetch-depth: 0
+           fetch-tags: true
+           ref: ${{ github.event.release.target_commitish }}
+
+      - name: Detectar y cambiar a la rama del release o crear una temporal
         run: |
-          git fetch --all
-          git checkout ${{ github.event.release.target_commitish || 'main' }}
+           
+           git fetch origin '+refs/heads/*:refs/remotes/origin/*'
+
+           BRANCH="${{ github.event.release.target_commitish }}"
+
+           if git show-ref --quiet refs/remotes/origin/$BRANCH; then
+             echo "Cambiando a la rama $BRANCH"
+             git checkout -B $BRANCH origin/$BRANCH
+           else
+              echo "No es una rama. Haciendo checkout al commit del tag y creando rama temporal"
+             git checkout "$BRANCH"
+              git checkout -b temp-release-branch
+            fi
 
       - name: Configurar Node.js
         uses: actions/setup-node@v3
